# debuggame

./: .gitignore  .travis.yml  CMakeLists.txt  Game.cpp  Game.h  LICENSE  README.md  debuggame.cbp  main.cpp
Entity/: Character.cpp  Character.h  Entity.cpp  Entity.h  Map.cpp  Map.h
NessEngine/: NessEngine.h  exports.h
NessEngine/scene/: scene.cpp
States/: State.cpp  State.h
resources/gfx/: Thumbs.db
resources/gfx/chars/: Thumbs.db
resources/maps/: map.tmx
src/: Game.cpp  Game.h  main.cpp
src/Entity/: Character.cpp  Character.h  Entity.cpp  Entity.h  Map.cpp  Map.h  Tile.cpp  Tile.h
src/States/: LocalMap.cpp  LocalMap.h  State.cpp  State.h
